[project]
name = "demo-iam-ip"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jeronimo Martinez Sanchez", email = "jms@rz0r.net" }
]
dependencies = [
    "aws-secretsmanager-caching>=1.1.3",
    "boto3>=1.34.149",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"demo-iam-ip" = "demo_iam_ip:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
virtual = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/demo_iam_ip"]
